[gd_scene load_steps=3 format=3 uid="uid://c2q7cu6v6ooav"]

[ext_resource type="PackedScene" uid="uid://utujl3ay3qm6" path="res://Dragon Game Template/Components/Control/Setting Widget/dragon_setting_base.tscn" id="1_eokug"]
[ext_resource type="Script" path="res://Dragon Game Template/Components/Control/Setting Widget/Option Button/setting_widget_option_button.gd" id="2_gyng5"]

[node name="SettingWidgetOptionButton" node_paths=PackedStringArray("option_button", "focus_me_node", "pass_focus_up", "pass_focus_right", "pass_focus_down", "pass_focus_left") instance=ExtResource("1_eokug")]
custom_minimum_size = Vector2(128, 64)
anchor_right = 0.44375
anchor_bottom = 0.208333
offset_right = -440.0
offset_bottom = -21.9998
size_flags_horizontal = 3
script = ExtResource("2_gyng5")
option_button = NodePath("MarginContainer/VBoxContainer/TextContainer/OptionButton")
focus_me_node = NodePath("MarginContainer/VBoxContainer/TextContainer/OptionButton")
pass_focus_up = [NodePath("MarginContainer/VBoxContainer/TextContainer/OptionButton")]
pass_focus_right = [NodePath("MarginContainer/VBoxContainer/TextContainer/OptionButton"), NodePath("MarginContainer/VBoxContainer/ButtonContainer/DefaultButton")]
pass_focus_down = [NodePath("MarginContainer/VBoxContainer/ButtonContainer/DefaultButton")]
pass_focus_left = [NodePath("MarginContainer/VBoxContainer/TextContainer/OptionButton"), NodePath("MarginContainer/VBoxContainer/ButtonContainer/DefaultButton")]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="TextContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TextContainer" index="0"]
layout_mode = 2
text = "- PICK A THING FROM A LIST"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/TextContainer" index="1"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../ButtonContainer/DefaultButton")
focus_next = NodePath("../../ButtonContainer/DefaultButton")
mouse_default_cursor_shape = 2
alignment = 1
allow_reselect = true
item_count = 1
popup/item_0/text = "Option"

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
alignment = 1

[node name="DefaultButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../TextContainer/OptionButton")
focus_previous = NodePath("../../TextContainer/OptionButton")
mouse_default_cursor_shape = 2
text = "key_default"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/TextContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/DefaultButton" to="." method="_on_default_button_pressed"]
